Ticket #1465 is fixed(Hard to read Enhancement)

--- a/static/themes/DRRPP/960_12_col.css
+++ b/static/themes/DRRPP/960_12_col.css
@@ -15,6 +15,7 @@
 
 body {
   min-width: 960px;
+  font-size:medium;
 }
 
 /* `Container
